test/date/SPtests/RFC822/valid/12.php
<?php

$date = 'Fri, 05 Nov 94 05:15:30 PST';
$expected = 784041330;

?>