test/date/SPtests/RFC822/invalid/decimal_second.php
<?php

// Decimal Second

$date = 'Fri, 05 Nov 94 13:15:30.25 GMT';
$expected = 784041330;

?>